--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,12 +2,15 @@
 
 
 .heading-part{
-    background-color: black;
+    background-image: url(../../images/1633345830554.jpeg);
+    /* background-color: black; */
     color: white;
     text-align: center;
 }
 
-
+.nav-text{
+    color: orange;
+}
 
 .main-heading{
     padding: 110px;
@@ -22,7 +25,7 @@
 }
 
 .service-section{
-    background-color: gray;
+    background-color: #212529;
     text-align: center;
     padding: 40px; 
 }
@@ -42,4 +45,30 @@
 
 .details-btn{
     background-color: orange;
+}
+
+
+.welcome-part{
+    /* background-color: black; */
+    text-align: center;
+    background-image: url(../../images/1633345830554.jpeg);
+    color: white;
+}
+.welcome-part h1{
+    line-height: 150px;
+    color: orange;
+}
+.welcome-section{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+ 
+
+    text-align: center;
+    grid-gap: 10px;
+}
+
+.student, .Volentiar{
+    border-right: 5px solid orange;
+    height: 500px;
+    padding: 40px;
 }
